fix: 修复K8s执行 pod 过滤错误
Signed-off-by: fit2-zhao <yong.zhao@fit2cloud.com>